YD-248 YD-255 added goalSpreadCells
This is included when reporting day information on a time zone goal.
