# appservice/src/main/resources/static/swagger/swagger-spec.yaml
@@ -2123,6 +2123,11 @@ definitions:
         items:
           type: integer
         description: Aggregates all activity on every quarter hour of the day (of which there are 96). This information is only included for time zone goals.
+      goalSpreadCells:
+        type: array
+        items:
+          type: integer
+        description: An array with indexes of the spread that are within the goal boundaries. This information is only included for time zone goals.
       _links:
         allOf:
           - $ref: '#/definitions/GoalLink'
@@ -2149,6 +2154,11 @@ definitions:
         items:
           type: integer
         description: Aggregates all activity on every quarter hour of the day (of which there are 96).
+      goalSpreadCells:
+        type: array
+        items:
+          type: integer
+        description: An array with indexes of the spread that are within the goal boundaries. This information is only included for time zone goals.
       _links:
         allOf:
           - $ref: '#/definitions/Curies'
