# core/src/main/java/nu/yona/server/goals/entities/TimeZoneGoal.java
@@ -5,7 +5,16 @@
 package nu.yona.server.goals.entities;
 
 import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeFormatterBuilder;
+import java.time.temporal.ChronoField;
+import java.time.temporal.TemporalAccessor;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import javax.persistence.Entity;
 
@@ -15,6 +24,7 @@ import nu.yona.server.analysis.entities.DayActivity;
 public class TimeZoneGoal extends Goal
 {
 	private String[] zones;
+	private int[] goalSpreadCells;
 
 	// Default constructor is required for JPA
 	public TimeZoneGoal()
@@ -22,11 +32,13 @@ public class TimeZoneGoal extends Goal
 
 	}
 
-	private TimeZoneGoal(UUID id, ZonedDateTime creationTime, ActivityCategory activityCategory, String[] zones)
+	private TimeZoneGoal(UUID id, ZonedDateTime creationTime, ActivityCategory activityCategory, String[] zones,
+			int[] goalSpreadCells)
 	{
 		super(id, creationTime, activityCategory);
 
 		this.zones = zones;
+		this.goalSpreadCells = goalSpreadCells;
 	}
 
 	private TimeZoneGoal(UUID id, TimeZoneGoal originalGoal, ZonedDateTime endTime)
@@ -80,11 +92,44 @@ public class TimeZoneGoal extends Goal
 
 	public static TimeZoneGoal createInstance(ZonedDateTime creationTime, ActivityCategory activityCategory, String[] zones)
 	{
-		return new TimeZoneGoal(UUID.randomUUID(), creationTime, activityCategory, zones);
+		return new TimeZoneGoal(UUID.randomUUID(), creationTime, activityCategory, zones, calculateGoalSpreadCells(zones));
+	}
+
+	private static int[] calculateGoalSpreadCells(String[] zones)
+	{
+		Set<Integer> goalSpreadCells = new HashSet<>();
+		DateTimeFormatter formatter = new DateTimeFormatterBuilder().appendPattern("HH:mm").toFormatter();
+		for (String zone : zones)
+		{
+			String[] zoneBeginEnd = zone.split("-");
+			int beginIndex = calculateSpreadIndex(formatter, zoneBeginEnd[0]);
+			int endIndex = calculateSpreadIndex(formatter, zoneBeginEnd[1]);
+			addIndexes(goalSpreadCells, beginIndex, endIndex);
+		}
+		return goalSpreadCells.stream().mapToInt(i -> i.intValue()).sorted().toArray();
+	}
+
+	private static void addIndexes(Set<Integer> goalSpreadCells, int beginIndex, int endIndex)
+	{
+		for (int i = beginIndex; (i < endIndex); i++)
+		{
+			goalSpreadCells.add(i);
+		}
+	}
+
+	private static int calculateSpreadIndex(DateTimeFormatter formatter, String timeString)
+	{
+		TemporalAccessor begin = formatter.parse(timeString);
+		return begin.get(ChronoField.MINUTE_OF_DAY) / 15;
 	}
 
 	private static TimeZoneGoal createInstance(TimeZoneGoal originalGoal, ZonedDateTime endTime)
 	{
 		return new TimeZoneGoal(UUID.randomUUID(), originalGoal, endTime);
+	}
+
+	public List<Integer> getGoalSpreadCells()
+	{
+		return Arrays.stream(goalSpreadCells).mapToObj(i -> new Integer(i)).collect(Collectors.toList());
 	}
 }
